# alsa-ucm-conf

./: .gitignore  Makefile.am  configure.ac  gitcompile
src/: Makefile.am
src/topology/: Makefile.am
src/topology/sklrt286/: Makefile.am
src/topology/sof/: Makefile.am  sof-apl-pcm512x.conf
src/ucm/: Makefile.am
src/ucm/AAEON-UP_APL01-V1.0-UP_APL01-SOF_010100_sofaplpcm512x_030800/: Makefile.am
src/ucm/sof-glkda7219max/: HiFi.conf  Makefile.am  sof-glkda7219max.conf
src/ucm/sof-sof_rt5682/: HiFi.conf  Makefile.am  sof-sof_rt5682.conf
